feat: add support for config file

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,3 +48,6 @@ jobs:
       
       - name: Build
         run: cargo build --all-features --verbose
+
+      - name: Test
+        run: cargo test --all-features --verbose
