--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ keywords = ["african", "ime", "typing"]
 [dependencies]
 clafrica = "0.2.0"
 rstk = "0.1.0"
+serde = { version = "1.0.163", features = ["serde_derive"] }
+toml = "0.7.3"
