--- a/data/sample.toml
+++ b/data/sample.toml
@@ -1,3 +1,7 @@
+[core]
+buffer_size = 20
+page_size = 10
+
 [theme]
 header.background = "#252320"
 header.foreground = "#dedddd"
@@ -5,3 +9,10 @@ header.font = { family = "Charis-SIL", size = 12, weight = "bold" }
 body.background = "#dedddd"
 body.foreground = "#252320"
 body.font = { family = "Charis-SIL", size = 10, weight = "bold" }
+
+[suggestions]
+_hello = "Hi!"
+sample = { path = "suggestions.toml" }
+
+[data]
+_exit_ = ""
