improve the cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rhai = ["afrim/rhai"]
 
 [dependencies]
 afrim = { version = "0.5.2", default-features = false }
+clap = "4.4.8"
 rstk = "0.1.0"
 serde = { version = "1.0.192", features = ["serde_derive"] }
 toml = "0.8.8"
