--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Get the release version from the tag
         if: env.VERSION == ''
-        run: echo "VERSION=$(echo ${{ github.ref_name }} | cut -f1 -d'-')" >> $GITHUB_ENV
+        run: echo "VERSION=$(echo ${{ github.ref_name }} | sed s/v\(.*\)-.*/\1/)" >> $GITHUB_ENV
       - name: Show the version
         run: |
           echo "version is: $VERSION"
