--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,14 +68,14 @@ jobs:
             rust: nightly
             target: x86_64-unknown-linux-gnu
             strip: x86_64-linux-gnu-strip
-#          - build: macos
-#            os: macos-latest
-#            rust: nightly
-#            target: x86_64-apple-darwin
-#          - build: win-msvc
-#            os: windows-latest
-#            rust: nightly
-#            target: x86_64-pc-windows-msvc
+          - build: macos
+            os: macos-latest
+            rust: nightly
+            target: x86_64-apple-darwin
+          - build: win-msvc
+            os: windows-latest
+            rust: nightly
+            target: x86_64-pc-windows-msvc
 
     steps:
       - name: Checkout the repo
