--- a/data/sample.toml
+++ b/data/sample.toml
@@ -2,17 +2,4 @@
 name = "Sample config"
 maintainors = ["test"]
 input_method = "test"
-
-[core]
-buffer_size = 20
-page_size = 10
-auto_commit = false
-
-[theme]
-header.background = "#252320"
-header.foreground = "#dedddd"
-header.font = { family = "Charis-SIL", size = 12, weight = "bold" }
-body.background = "#dedddd"
-body.foreground = "#252320"
-body.font = { family = "Charis-SIL", size = 10, weight = "bold" }
-
+homepage = "example.com"
