ci: update coverage
ignore the `src/main.rs` while the coverage check

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -66,6 +66,7 @@ jobs:
             --branch \
             --ignore-not-existing \
             --ignore "/*" \
+            --ignore "src/{main}.rs" \
             --excl-line "#\\[derive\\(" \
             -o ./coverage/lcov.info
 
