--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ inhibit = ["afrim/inhibit"]
 rhai = ["afrim/rhai"]
 
 [dependencies]
-afrim = { version = "0.5.4", default-features = false, path = "../afrim/service" }
+afrim = { version = "0.5.4", default-features = false, git = "https://github.com/pythonbrad/afrim", rev = "fcb7721" }
 anyhow = "1.0.82"
 clap = "4.5.4"
 rstk = "0.3.0"
