--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Check that tag version and Cargo.toml version are the same
         shell: bash
         run: |
-          if ! grep -q "version = \"$(echo $VERSION | sed 's/v\(.*\)-.*/\1/')\"" Cargo.toml; then
+          if ! grep -q "version = \"$(echo $VERSION | sed 's/v\(.*\)-*.*/\1/')\"" Cargo.toml; then
             echo "version does not match Cargo.toml" >&2
             exit 1
           fi
