fix: update the config template
Now, the config template is
in the respect of the current afrim data.

--- a/data/full_sample.toml
+++ b/data/full_sample.toml
@@ -1,8 +1,9 @@
 [info]
 name = "Sample config"
-maintainors = ["test"]
-input_method = "test"
-homepage = "example.com"
+authors = ["test"]
+description = "test"
+website = "example.com"
+version = "2024-08-19"
 
 [core]
 buffer_size = 20
