--- a/data/sample.toml
+++ b/data/sample.toml
@@ -1,5 +1,6 @@
 [info]
 name = "Sample config"
-maintainors = ["test"]
-input_method = "test"
-homepage = "example.com"
+authors = ["test"]
+description = "test"
+website = "example.com"
+version = "2024-08-19"
